# bogus

./: CMakeLists.txt  README.md  cache-preload.cmake
include/: CMakeLists.txt
include/bogus/: CMakeLists.txt  math.h
src/: CMakeLists.txt  bogus-core.cpp  main.cpp
test/: CMakeLists.txt  math_test.cpp  misc_test.cpp  test-runner.cpp
